<resources>
    <string name="app_name">HSFuldapp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Home</string>
    <string name="noten">Noten</string>
    <string name="mensa">Mensa</string>
    <string name="header">Header</string>
    <string name="cat">Hauptspeise</string>
    <string name="fname">Rahmgeschnetzeltes vom Schwein mit Champignons</string>
    <string name="fdesc">mit Beilage nach Wahl</string>
    <string name="fprice">3,20€ / 3,20€ / 3,20€</string>
    <string name="pruefung">Modulprüfung: Gestaltungsgrundlagen und Medienwerkzeuge</string>
    <string name="note">1,7</string>
    <string name="versuch">1. Versuch</string>
    <string name="credits">10 Credits</string>
    <string name="bestanden">bestanden</string>
    <string name="datum">19.03.2016</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
