<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:maxWidth="250dp"
        android:id="@+id/pruefung"
        android:text="@string/pruefung"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:maxWidth="230dp"
        android:id="@+id/modulstatus"
        android:text="@string/bestanden"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/pruefung"
        android:layout_alignStart="@+id/pruefung" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:maxWidth="230dp"
        android:id="@+id/credits"
        android:text="@string/credits"
        android:layout_alignTop="@+id/modulstatus"
        android:layout_toEndOf="@+id/modulstatus"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:maxWidth="230dp"
        android:id="@+id/versuch"
        android:text="@string/versuch"
        android:layout_alignTop="@+id/modulstatus"
        android:layout_toEndOf="@+id/credits"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:id="@+id/note"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/pruefung"
        android:text="@string/note"
        android:layout_alignParentEnd="true" />
</RelativeLayout>