<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            android:checkable="true"
            android:checked="true"/>
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/noten"
            android:checkable="true"/>
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_room_service_black_24dp"
            android:title="@string/mensa"
            android:checkable="true"/>
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Raumplan"
            android:checkable="true"/>
    </group>
</menu>